Working app - beta 2

--- a/app/src/main/res/layout/note_list_item.xml
+++ b/app/src/main/res/layout/note_list_item.xml
@@ -3,13 +3,17 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
-    android:padding="4dp">
+    android:paddingTop="10dp"
+    android:paddingBottom="4dp"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp">
 
     <ImageView
         android:id="@+id/imageDocIcon"
         android:layout_width="36dp"
         android:layout_height="36dp"
-        android:src="@drawable/ic_document" />
+        android:src="@drawable/ic_document"
+        android:contentDescription="@string/note"/>
 
     <TextView
         android:id="@+id/tvNote"
@@ -21,7 +25,7 @@
         android:layout_toEndOf="@+id/imageDocIcon"
         android:layout_toRightOf="@+id/imageDocIcon"
         android:singleLine="true"
-        android:text="Dummy Text"
+        android:text="@string/dummy_text"
         android:textColor="@color/list_item_text"
         android:textSize="18sp" />
 
@@ -30,7 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:singleLine="true"
-        android:text="Dummy Text"
+        android:text="@string/dummy_text"
         android:textColor="@color/list_item_text"
         android:textSize="14sp"
         android:layout_below="@+id/tvNote"
