--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,24 +1,27 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    xmlns:app='http://schemas.android.com/apk/res-auto'
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
+    android:layout_height="match_parent"
+    android:layout_marginTop="6dp"
+    tools:context=".MainActivity">
 
     <ListView
         android:id="@+id/android:list"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <at.markushi.ui.CircleButton
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:layout_margin="6dp"
-        app:cb_color="@color/primary"
-        android:layout_alignBottom="@+id/android:list"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
+    <com.melnykov.fab.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
         android:src="@drawable/ic_action_add"
-        android:onClick="openEditorForNewNote" />
+        fab:fab_colorNormal="@color/primary_dark"
+        fab:fab_colorPressed="@color/primary"
+        fab:fab_colorRipple="@color/accent"
+        android:onClick="openEditorForNewNote"
+        android:layout_margin="24dp"
+        android:layout_alignBottom="@+id/android:list"
+        android:layout_alignRight="@+id/android:list"
+        android:layout_alignEnd="@+id/android:list" />
 </RelativeLayout>
